<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/colorPrimary"
    >
    <TextView
        android:id="@+id/txt_left"
        style="@style/txt_titleStyle1"
        android:text="@string/app_name"
        android:textSize="17sp"
        android:layout_marginLeft="10dp"
        android:visibility="gone"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        />
    <ImageView
        android:id="@+id/img_back"
        android:layout_width="40dp"
        android:layout_height="18dp"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:src="@drawable/icon_back"
        android:contentDescription="@string/app_name"
        />
    <TextView
        android:id="@+id/txt_title"
        style="@style/txt_titleStyle1"
        android:text="@string/app_name"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />
    <ImageView
        android:id="@+id/img_right"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:src="@drawable/icon_add"
        android:visibility="gone"
        android:layout_alignParentRight="true"
        android:layout_marginRight="7dp"
        android:layout_centerVertical="true"
        android:contentDescription="@string/app_name"
        />
    <TextView
        android:id="@+id/txt_right"
        style="@style/txt_titleStyle1"
        android:text="@string/menu_addfriend"
        android:textSize="17dp"
        android:visibility="gone"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="7dp"
        />
    <Button
        android:id="@+id/btn_send"
        style="@style/btn_titleStyle"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="7dp"
        android:visibility="gone"
        android:text="@string/addcontact_send_msg"
        />
</RelativeLayout>