<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.ucai.superwechat.ui.ProfileFragment">

    <ScrollView
        android:id="@+id/profile_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/layout_profile"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="16dp"
                    android:id="@+id/profile_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/default_avatar"/>
                <TextView
                    android:id="@+id/profile_nick"
                    android:layout_toRightOf="@id/profile_avatar"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="6dp"
                    android:text="鳄鱼"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    />
                <TextView
                    android:id="@+id/profile_weixin"
                    android:text="鳄鱼"
                    android:textSize="20sp"
                    android:layout_marginTop="46dp"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_height="25dp"
                    android:layout_toRightOf="@+id/profile_avatar"

                     />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/text_color_hint"/>
            <RelativeLayout
                android:id="@+id/profile_phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical">
                <TextView
                    android:layout_marginLeft="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_me_photo"
                    android:text="@string/profile_txt_album"
                    android:gravity="center_vertical"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/profile_collect"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical">
                <TextView
                    android:layout_marginLeft="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_me_collect"
                    android:text="@string/profile_txt_collect"
                    android:gravity="center_vertical"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/text_color_hint"/>
            <RelativeLayout
                android:id="@+id/profile_money"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical">
                <TextView
                    android:layout_marginLeft="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_me_money"
                    android:text="@string/profile_txt_money"
                    android:gravity="center_vertical"/>

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/text_color_hint"/>
            <RelativeLayout
                android:id="@+id/profile_smail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical">
                <TextView
                    android:layout_marginLeft="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_me_smail"
                    android:text="@string/profile_txt_smail"
                    android:gravity="center_vertical"/>

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/text_color_hint"/>
            <RelativeLayout
                android:id="@+id/profile_setting"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical">
                <TextView
                    android:layout_marginLeft="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_me_setting"
                    android:text="@string/profile_txt_setting"
                    android:gravity="center_vertical"/>

            </RelativeLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
